11-grade/3_november/9-test/python.log
Python 3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> 4*32000*32*120
491520000
>>> 4*32000*32*120/8/1024/1024
58.59375
>>> 15/3
5.0
>>> *4
  File "<stdin>", line 1
SyntaxError: can't use starred expression here
>>> 15/3*4
20.0
>>> 15/3
5.0
>>> *8
  File "<stdin>", line 1
SyntaxError: can't use starred expression here
>>> 35/2/3.5*3
15.0
>>> 5*60+25
325
>>> 44000*325*2*8
228800000
>>> 44000*325*2*8/8/1024/1024
27.27508544921875
>>>
>>> 44000*325*2*25/8/1024/1024
85.2346420288086
>>> 44000*325*2*24/8/1024/1024
81.82525634765625
>>> 512*2*48000*24
1179648000
>>> 512*2*48000*24*0.16/8/1024/1024/25
0.9
>>> 512*2*48000*24
1179648000
>>> 512*2*48000*24*0.16
188743680.0
>>> 512*2*48000*24*0.16/8/1024/1024
22.5
>>> 512*60*2*48000*24*0.16/8/1024/1024/25
54.0
>>> 4*32000*480*20/8/1024/1024
146.484375
>>> 4*32000*480*100/8/1024/1024
732.421875
>>> 4*32000*480*4/8/1024/1024
29.296875
>>> 4*32000*480*5/8/1024/1024
36.62109375
>>> 4*32000*480*6/8/1024/1024
43.9453125
>>> 4*32000*480*7/8/1024/1024
51.26953125
>>> 4*32000*480*8/8/1024/1024
58.59375
>>> 18*4
72
>>> 18*4/3
24.0
>>> 90*1.5
135.0
>>> 90*1.5/3*1.5
67.5
>>> 90*1.5/3*1.5/30
2.25
>>> 30*3/2/1.5
30.0
>>> 30*3/2
45.0
>>> 30*3/2*1.5
67.5
>>> 30*3/2*1.5
KeyboardInterrupt
>>> 8*15/3
40.0
>>> 8*15/3/2
20.0
>>> 26/
  File "<stdin>", line 1
    26/
       ^
SyntaxError: invalid syntax
>>> 15/3
5.0
>>> 3*1024/128/3
8.0
>>> 3*1024/128
24.0
>>> 24/3/24
0.3333333333333333
>>> 3*1024/12824
KeyboardInterrupt
>>>
KeyboardInterrupt
>>> 24/8
3.0
>>> 3*1024
3072
>>> 3072/128
24.0
>>> 24/8
3.0
>>> 24/9
2.6666666666666665
>>> 24/10
2.4
>>> 24/8
3.0
>>> 2*2*1.5
6.0
>>> 2*2*1.5*1.5
9.0
>>> 24/9
2.6666666666666665
>>> 3*1024
3072
>>> 3072/3/3/8
42.666666666666664
>>> 3072/3/3/9
37.925925925925924
>>> 3072/3/3/512
0.6666666666666666
>>> 3072/3/3/2
170.66666666666666
>>> 3072/3/3/3
113.77777777777777
>>> 3072/3/3/2
170.66666666666666
>>> 300/3/3/24
1.388888888888889
>>> 300/3/3/243^X
KeyboardInterrupt
>>> 32/12
2.6666666666666665
>>> 12/32
0.375
>>> 32/12
2.6666666666666665
>>> 32/12*1024*8*1024
22369621.333333332
>>> 12/32
0.375
>>> 12/32*8*1024*1024
3145728.0
>>> 12/32*8*1024*1024-64*8*1024*8/2048/1600
3145726.72
>>> 12/32*8*1024*1024-64*8*1024
2621440.0
>>> 2621440*8
20971520
>>> 20971520/(2048*1600)
6.4
>>> 80/0.2
400.0
>>> 80/0.2*100
40000.0
>>> 80*0.2/100
0.16
>>> 80/0.2
400.0
>>> 80/0.8
100.0
>>> 1850/0.8
2312.5
>>> 2312.5/0.2
11562.5
>>> 2312.5*0.2
462.5
>>> 2312.5*0.8
1850.0
>>> 2312.5//1200/1600
0.000625
>>> 2312.5/1200/1600*8*1024
9.866666666666667
>>> 4*8*300*300*24+(6*8*1024)
69169152
>>> 4*8*300*300*24+(6*8*1024)/8/1024
69120006.0
>>> 4*8*300*24+(6*8*1024)/8/1024
230406.0
>>> 4*8*300*24+(6*8*1024)/8/1024
KeyboardInterrupt
>>> 2100*1200*24+(6*8*1024)
60529152
>>> (2100*1200*24+(6*8*1024))/8/1024
7388.8125
>>> 12*1024*8*1024/4044/1028/(8+9)
1.4243540781320783
>>> 12*1024*8*1024/4044/1028/(8+10)
1.3452232960136294
>>> 12*1024*8*1024/4044/1028/(8+10)
1.3452232960136294
>>> 12*1024*8*1024/4044/1028/8
3.0267524160306665
>>> 12*1024*8*1024/4044/1028/
  File "<stdin>", line 1
    12*1024*8*1024/4044/1028/
                             ^
SyntaxError: invalid syntax
>>> 12*1024*8*1024/4044/1028
24.21401932824533
>>> 24-8
16
>>> 2**16
65536
>>> 1280*1024/640/480
4.266666666666667
>>> 1280*1024
1310720
>>> 640*480
307200
>>> 1310720/307200
4.266666666666667
>>> 32*3
96
>>> 32*4.2666666666*1.5
204.7999999968
>>> 32*4.2666666666*1.5/3
68.2666666656
>>> 1280/640
2.0
>>> 1024/480
2.1333333333333333
>>> 640*480*4.2666666666
1310719.99997952
>>> 32*4.26666666666*1.5
204.79999999967998
>>> 32*4.26666666666*1.5/3
68.26666666656
>>> 68/3
22.666666666666668
>>> 32*4.266666666666666666666*(3/2)/3
68.26666666666667
>>>